--- a/VendingTests/VendingTests.csproj
+++ b/VendingTests/VendingTests.csproj
@@ -66,7 +66,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="CoinAppraiserTest.cs" />
+    <Compile Include="UsMintCoinAppraiserTest.cs" />
     <Compile Include="CoinValidatorTest.cs" />
     <Compile Include="VendingMachineTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
