--- a/Vending/Vending.csproj
+++ b/Vending/Vending.csproj
@@ -45,8 +45,7 @@
   <ItemGroup>
     <Compile Include="Coin.cs" />
     <Compile Include="FaceValueCoinAppraiser.cs" />
-    <Compile Include="CoinValidator.cs" />
-    <Compile Include="ICoinAppraiser.cs" />
+    <Compile Include="IAppraiser.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VendingMachine.cs" />
