--- a/Vending/Vending.csproj
+++ b/Vending/Vending.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Coin.cs" />
     <Compile Include="FaceValueCoinAppraiser.cs" />
     <Compile Include="IAppraiser.cs" />
+    <Compile Include="IDisplay.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VendingMachine.cs" />
